Move Java requirement to 21 from 17